--- a/Ex1-explanation/Block-02/index.html
+++ b/Ex1-explanation/Block-02/index.html
@@ -23,6 +23,7 @@
             --><li><a href="#"></a>Gallery</li><!-- 
             --><li><a href="#"></a>Contact</li>
             </nav>
+            
         </div>
     </header>
 
@@ -49,7 +50,7 @@
 
     <!--FOOTER-->
     <footer>
-        <small>&#169; 2020 Annie by duruThemes</small>
+        <small>&#169; 2020 lorem ipsum dolor</small>
     </footer>
 </body>
 </html>
