--- a/Ex1-explanation/Block-05/index.html
+++ b/Ex1-explanation/Block-05/index.html
@@ -14,7 +14,7 @@
             <h1 class="logo">Vacation <span id="pink">Rental</span></h1>
         </a>
            
-        <nav class="nav primary-nav">
+        <nav class="primary-nav">
             <li><a href="#"></a>Home</li><!-- 
          --><li><a href="#"></a>About</li><!-- 
          --><li><a href="#"></a>Services</li><!-- 
@@ -28,7 +28,7 @@
         <section class="hero">
             <h2>Welcome to Vacation Rental</h2>
             <p>Rent an apartment for your vacation</p>
-            <button class="btn btn-pink">
+            <button class="btn pink-btn">
                 <a href="#">Learn More</a>
             </button>
             <button class="btn">
@@ -40,8 +40,8 @@
             <div class="col">
                 <img src="assets/images/map.jpg" alt="Image 1">
                 <h3>Map Direction</h3>
-                <p class="text">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-                <button class="section-btn btn-pink">
+                <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis temporibus eligendi</p>
+                <button class="section-btn pink-btn">
                     <a class="section-link" href="#">Read More</a>
                 </button>
             </div><!--
@@ -49,8 +49,8 @@
             --><div class="col">
                 <img src="assets/images/accomodation.jpg" alt="Image 2">
                 <h3>Accomodation Services</h3>
-                <p class="text">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-                <button class="section-btn btn-pink">
+                <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis temporibus eligendi</p>
+                <button class="section-btn pink-btn">
                     <a class="section-link" href="#">Read More</a>
                 </button>
             </div><!--
@@ -58,8 +58,8 @@
             --><div class="col">
                 <img src="assets/images/experience.jpg" alt="Image 3">
                 <h3>Great Experience</h3>
-                <p class="text">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-                <button class="section-btn btn-pink">
+                <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis temporibus eligendi</p>
+                <button class="section-btn pink-btn">
                     <a class="section-link" href="#">Read More</a>
                 </button>
             </div>
