Modify Changes as recommended

--- a/Ex1-explanation/Block-02/index.html
+++ b/Ex1-explanation/Block-02/index.html
@@ -9,12 +9,11 @@
 </head>
 <body>
     <!--HEADER-->
-    <header class="primary-header clearfix">
+    <header class="primary-header">
         <div class="container">
             <a href="#">
                 <h1 class="logo">Lorem Ipsum</h1>
             </a>
-            
 
             <nav class="nav primary-nav">
                 <li><a href="#"></a>Home</li><!-- 
