--- a/Ex1-explanation/Block-05/index.html
+++ b/Ex1-explanation/Block-05/index.html
@@ -11,7 +11,7 @@
     <!--HEADER-->
     <header class="primary-header container clearfix"> 
         <a href="#">
-            <h1 class="logo">Vacation <span id="pink">Rental</span></h1>
+            <h1 class="logo">Vacation <span class="pink">Rental</span></h1>
         </a>
            
         <nav class="primary-nav">
