--- a/Ex2-Assignment-level-1/index.html
+++ b/Ex2-Assignment-level-1/index.html
@@ -18,7 +18,7 @@
     <main class="clearfix">
 
         <!--left-->
-        <section class="col col-left">
+        <aside class="col col-left">
             <ul>
                 <li>Introductory</li>
                 <li>The First Cat Show</li>
@@ -26,7 +26,7 @@
                 <li>Trained Cats</li>
                 <li>Usefulness of Cats</li>
             </ul>
-        </section>
+        </aside>
 
         <!--Middle-->
         <article class="col col-middle">
@@ -42,9 +42,9 @@
         </article>
 
         <!--Right-->
-        <section class="col col-right">
+        <aside class="col col-right">
             <p>Let any one have a plague of rats and mice, as I once had, and let them be delivered therefrom by cats, as I was, and they will hav a lasting and kind regard for them.</p>
-        </section>
+        </aside>
     </main>
 </body>
 </html>
