--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -43,7 +43,7 @@
             </article>
         </div>
         <aside class="aside container left">
-            <img src="assets/images/laptop.jpg" alt="Laptop">
+            <img class="main-img" src="assets/images/laptop.jpg" alt="Laptop">
         </aside>
     </section>
 
